<resources>
    <string name="shr_app_name">Brindavan</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="home_label">Home</string>
    <string name="noticeboard_label">Notice board</string>
    <string name="vehiclelogs_label">Vehicle Logs</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="family_members">Family Members</string>
    <string name="resident_directory">Resident Directory</string>
    <string name="communicate_with_gate">Communicate With Gate</string>
    <string name="daily_helps">Daily Helps</string>
    <string name="hire_new_helps">Hire New Helps</string>
    <string name="service_requests">Service Requests</string>
    <string name="help_guests">Help Guest or Service Provider</string>
    <string name="sos">SoS</string>
    <string name="unannounced_guest">Unannounced Guest</string>
    <string name="signIn">Sign In</string>
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_msg">Manage entrance, parking, security etc. in your building from one single point .Enjoy your convenience the professional monitoring plans pack in additional features like home environmental monitoring By our website</string>
    <string name="brindavan_your_home">Brindavan | Your Home</string>
    <string name="msg">It is situated at Uttar Pradesh, India.</string>
    <string name="check">Check on Google Maps</string>
    <string name="notice_subtitle">Notice Board of Building </string>
    <string name="communicate_subtitle">Communication gate of Building </string>
    <string name="notic_header">RWA Notice Board</string>
    <string name="apartent_name">Prangan Apartment</string>
    <string name="notice_topic1">General Body Meeting - 10 AM @ Club House with Lunch</string>
    <string name="notice_date1">26 Nov 2019 10 AM</string>
    <string name="notice_details1">The Google company was officially launched in 1998 by Larry
        Page and Sergey Brin to market Google Search, which has become the most used web-based
        search engine. Larry Page and Sergey Brin, students at Stanford University in California,
        developed a search algorithm at first known as
        "BackRub" in 1996, with the help of Scott Hassan and Alan Steremberg. </string>
    <string name="notice_details2">Google has engaged in partnerships with NASA, AOL,
        Sun Microsystems, News Corporation, Sky UK, and others. The company set up a
        charitable offshoot, Google.org, in 2005. Google was involved in a 2006 legal
        dispute in the US over a court order to disclose URLs
        and search strings, and has been the subject of tax avoidance investigations in the UK. </string>
</resources>
