<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    tools:context="net.innovexit.brindavan.activities.NoticeBoardActivity">
    <ScrollView
        android:id="@+id/noticeMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/nav_menu"
            style="@style/Widget.Shrine.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingBottom="130dp">

            <include layout="@layout/shr_backdrop" />
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/notice_app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/backspace"
            app:title="Notice Board" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="9dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/noticeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:background="@drawable/shr_product_grid_background_shape">
            <TextView
                android:id="@+id/noticeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/noticeboard_label"
                android:textAllCaps="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/noticeSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noticeTitle"
                android:layout_marginLeft="20dp"
                android:text="@string/notice_subtitle"
                android:textColor="@color/textColorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noticeTitle"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/noticeSubTitle"
                android:text="@string/shr_app_name"
                android:textColor="#2196F3"/>
            <TextView
                android:id="@+id/noticeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noticeSubTitle"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/notic_header"
                android:textAlignment="center"
                android:textColor="#00BCD4"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/apartmentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/noticeHeader"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_style"
                android:padding="10dp"
                android:text="@string/apartent_name"
                android:textAllCaps="true"
                android:textStyle="bold"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/apartmentName">
                <RelativeLayout
                    android:id="@+id/notices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/topic"
                        android:layout_width="250dp"
                        android:layout_height="100dp"
                        android:background="#673AB7"
                        android:padding="20dp"
                        android:text="@string/notice_topic1"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/dateTime"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_toEndOf="@+id/topic"
                        android:background="#0367B3"
                        android:padding="20dp"
                        android:text="@string/notice_date1"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/noticeDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/topic"
                        android:padding="10dp"
                        android:text="@string/notice_details1"
                        android:textColor="@color/textColorPrimary"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/notices2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notices"
                    android:padding="15dp">
                    <TextView
                        android:id="@+id/topic2"
                        android:layout_width="250dp"
                        android:layout_height="100dp"
                        android:background="#673AB7"
                        android:padding="20dp"
                        android:text="@string/notice_topic1"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/dateTime2"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_toEndOf="@+id/topic2"
                        android:background="#0367B3"
                        android:padding="20dp"
                        android:text="@string/notice_date1"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/noticeDetails2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/topic2"
                        android:padding="10dp"
                        android:text="@string/notice_details2"
                        android:textColor="@color/textColorPrimary"/>

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
