<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:background="@drawable/sigin_style"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sign_edit_text_style"
            android:hint="@string/username"
            android:padding="10sp"
            android:textColor="#FFFF" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sign_edit_text_style"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColor="#FFFF" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:onClick="goMainPage"
            android:padding="10dp"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>