<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="net.innovexit.brindavan.activities.HomeActivity">
    <ScrollView
        android:id="@+id/homeMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/nav_menu"
            style="@style/Widget.Shrine.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingBottom="130dp">

            <include layout="@layout/shr_backdrop" />
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_app_bar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/menu"
            app:title="@string/shr_app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/homeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@drawable/shr_product_grid_background_shape">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentBottom="true"
            android:background="@color/productGridBackgroundColor"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome"/>

        <TextView
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/shr_app_name"
            android:textAllCaps="true"
            android:textColor="#00B7FF"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name1"
            android:fontFamily="sans-serif"
            android:paddingLeft="20dp"
            android:text="@string/brindavan_your_home"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name2"
            android:layout_marginLeft="20dp"
            android:text="@string/msg"
            android:textColor="@color/textColorPrimary"/>
        <TextView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg"
            android:paddingLeft="20dp"
            android:text="@string/check"
            android:textColor="#00B7FF"/>

    </RelativeLayout>

</RelativeLayout>
